--- a/csv_loader/0423.html
+++ b/csv_loader/0423.html
@@ -102,6 +102,7 @@
     @media (max-width: 576px) {
       h1 {
         font-size: 32px;
+        margin-bottom: 4px;
       }
 
       .subtitle {
