--- a/csv_loader/0423.html
+++ b/csv_loader/0423.html
@@ -12,7 +12,7 @@
       background-color: #9c1321;
       /* 深紅背景 */
       color: white;
-      font-family: 'Noto Sans TC', 'Noto Sans CJK TC', sans-serif;
+      font-family: 'Noto Sans CJK TC', sans-serif;
       text-align: center;
       padding: 50px 30px;
     }
