--- a/img_generator/card/index.html
+++ b/img_generator/card/index.html
@@ -44,7 +44,7 @@
         <div class="form-check mb-3">
             <input class="form-check-input" type="checkbox" id="toggleBackground" checked>
             <label class="form-check-label" for="toggleBackground">
-                顯示背景圖
+                顯示橫版
             </label>
         </div>
         <div class="text-end mb-3 d-flex justify-content-end gap-2">
@@ -118,10 +118,21 @@
 
         function drawImage(data) {
             const bg = new Image();
+            // const bgsm = new Image();
             const fg = new Image();
             const levelImg = new Image();
 
-            bg.src = 'akari-bg.png';
+            const canvas = document.getElementById('canvas');
+            if (toggleBackground.checked) {
+                canvas.width = 1200;
+                canvas.height = 400;
+                bg.src = 'akari-small.png';
+
+            } else {
+                canvas.width = 1200;
+                canvas.height = 1200;
+                bg.src = 'akari-bg.png';
+            }
             fg.src = 'akari-txt.png';
 
             if (data.amount >= 3000) levelImg.src = '1.png';
@@ -134,26 +145,48 @@
                 new Promise(res => { levelImg.onload = res })
             ]).then(() => {
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
+                ctx.drawImage(bg, 0, 0);
 
-                if (toggleBackground.checked) ctx.drawImage(bg, 0, 0);
-                ctx.drawImage(fg, 0, 0);
-                ctx.drawImage(levelImg, 998, 433);
+                if (toggleBackground.checked) {
+                    ctx.drawImage(levelImg, 1032, 55);
 
-                ctx.font = '32px M';
-                ctx.fillStyle = '#2d2d2d';
-                ctx.fillText(data.name, 125, 647);
+                    ctx.font = '28px M';
+                    ctx.fillStyle = '#2d2d2d';
+                    ctx.fillText(data.name, 93, 190);
 
-                ctx.font = '28px R';
-                ctx.fillStyle = '#2d2d2d';
-                drawWrappedText(data.comment, 140, 692, 900, 36, '28px R');
+                    ctx.font = '28px R';
+                    ctx.fillStyle = '#2d2d2d';
+                    drawWrappedText(data.comment, 105, 240, 980, 36, '28px R',2);
 
-                ctx.fillStyle = '#959393';
-                ctx.fillText(data.date, 898, 908);
-                // 打印 灯灯的話（M字體，多行換行）
-                ctx.font = '28px M';
-                ctx.fillStyle = '#2d2d2d';
-                const akariMsg = "灯灯想說：" + document.getElementById('akariMessage').value;
-                drawWrappedText(akariMsg, 179, 822, 870, 36, '28px M');
+                    ctx.fillStyle = '#959393';
+                    ctx.fillText(data.date, 938, 190);
+                    // 打印 灯灯的話（M字體，多行換行）
+                    ctx.font = '28px M';
+                    ctx.fillStyle = '#2d2d2d';
+                    const akariMsg = "灯灯想說：" + document.getElementById('akariMessage').value;
+                    drawWrappedText(akariMsg, 139, 340, 950, 36, '28px M',1);
+
+                }
+                else {
+                    ctx.drawImage(fg, 0, 0);
+                    ctx.drawImage(levelImg, 998, 433);
+
+                    ctx.font = '32px M';
+                    ctx.fillStyle = '#2d2d2d';
+                    ctx.fillText(data.name, 125, 647);
+
+                    ctx.font = '28px R';
+                    ctx.fillStyle = '#2d2d2d';
+                    drawWrappedText(data.comment, 140, 692, 900, 36, '28px R');
+
+                    ctx.fillStyle = '#959393';
+                    ctx.fillText(data.date, 898, 908);
+                    // 打印 灯灯的話（M字體，多行換行）
+                    ctx.font = '28px M';
+                    ctx.fillStyle = '#2d2d2d';
+                    const akariMsg = "灯灯想說：" + document.getElementById('akariMessage').value;
+                    drawWrappedText(akariMsg, 179, 822, 870, 36, '28px M');
+                }
 
                 downloadLink.href = canvas.toDataURL('image/png');
             });
